<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Running CA1</string>
    <string name="button_addTrack">Add Track</string>
    <string name="button_saveTrack">Save Track</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_takePhoto"> Take Photo </string>
    <string name="button_location"> Set Location </string>
    <string name="button_location_end"> Set Destination </string>
    <string name="hint_trackTitle">Track Title</string>
    <string name="hint_trackDescription">Track Description</string>
    <string name="hint_trackSearch">Track Search by Title</string>
    <string name="hint_weatherSelect">Invalid Weather Option</string>
    <string name="hint_difficultySeekbar">Choose Difficulty</string>
    <string name="menu_addTrack">Add</string>
    <string name="menu_cancelTrack">Cancel</string>
    <string name="menu_deleteTrack">Delete</string>
    <string name="snackbar_invalidTrack">Please Enter a title</string>
    <string name="select_trackImage">Select Track Image</string>
    <string name="select_changeTrackImage">Change Track Image</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="chip_all_weather">All</string>
    <string name="chip_clear_weather">Clear</string>
    <string name="chip_sunny_weather">Sunny</string>
    <string name="chip_windy_weather">Windy</string>
    <string name="chip_rainy_weather">Rainy</string>

    <string name="difficulty_stars">★</string>

    <string-array name="options_weather">
        <item>Clear</item>
        <item>Sunny</item>
        <item>Windy</item>
        <item>Rainy</item>
    </string-array>

</resources>