<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="ie.setu.mobileapp2ca1.view.RunningView">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/runningTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_trackTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/runningDescription"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_trackDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/runningDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:thumbTint="@color/colorAccent"
                android:progressTint="@color/colorAccent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/runningWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/takePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/button_takePhoto"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/trackImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"/>

            <Button
                android:id="@+id/runningStartLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/runningEndLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location_end"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addTrack"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>